--- a/index.html
+++ b/index.html
@@ -4,67 +4,79 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Cestovka</title>
 </head>
 
 <body>
-	Last minute
-	Destinace
-	Časté otázky
 
-	17 600 Kč
-	Pohoda pod palmami
-	Nejlepší dovolená pro nejvíc nejlínější lidi na světě
+	<h1>Cestovka</h1>
+	<header>
+		Last minute
+		Destinace
+		Časté otázky
+	</header>
+	<div uvod>
+		17 600 Kč
+		Pohoda pod palmami
+		Nejlepší dovolená pro nejvíc nejlínější lidi na světě
 
-	8 490 Kč
-	Klid u jezera
+		8 490 Kč
+		Klid u jezera
 
-	4 990 Kč
-	Výlet na kole
+		4 990 Kč
+		Výlet na kole
+	</div>
+	<div sluzby>
+		Podpora na místě
+		V cílové destinaci jsou k dispozici naši delegáti, kteří vám vždy rádi poradí.
 
-	Podpora na místě
-	V cílové destinaci jsou k dispozici naši delegáti, kteří vám vždy rádi poradí.
+		Služby na letišti
+		Při odletu tam i zpět za vás odbavíme vaše zavadla. Na letišti nebudete čekat.
 
-	Služby na letišti
-	Při odletu tam i zpět za vás odbavíme vaše zavadla. Na letišti nebudete čekat.
+		Do celého světa
+		Nabízíme pravidelné slevy na vybraných destinací na všech kontinentech.
 
-	Do celého světa
-	Nabízíme pravidelné slevy na vybraných destinací na všech kontinentech.
+		Vaše bezpečí
+		Není-li v cílové destinaci v čase odletu bezpečno, vrátíme vám peníze.
+	</div>
+	<div last_min>
+		Last minute zájezdy
 
-	Vaše bezpečí
-	Není-li v cílové destinaci v čase odletu bezpečno, vrátíme vám peníze.
+		18 500 Kč
+		Grand Canyon
 
-	Last minute zájezdy
+		8 900 Kč
+		Pěšky po Kanárských ostrovech
 
-	18 500 Kč
-	Grand Canyon
+		15 900 Kč
+		Romantika u horského jezera
+		Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.
+	</div>
+	<div novinky>
+		Novinky
 
-	8 900 Kč
-	Pěšky po Kanárských ostrovech
+		15. 8. 2020
+		Magický Zanzibar
+		Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví vůně exotických koření, příznivé klima, teplé moře,
+		exotická flóra i fauna.
 
-	15 900 Kč
-	Romantika u horského jezera
-	Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.
+		31. 9. 2020
+		Návrat českých občanů ze zahraničí
+		Všichni občané ČR vracející se ze zahraničí zpět se musí řídit podmínkami uvedenými v platném Ochranném opatření
+		Ministerstva zdravotnictví ČR.
 
-	Novinky
-
-	15. 8. 2020
-	Magický Zanzibar
-	Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví vůně exotických koření, příznivé klima, teplé moře,
-	exotická flóra i fauna.
-
-	31. 9. 2020
-	Návrat českých občanů ze zahraničí
-	Všichni občané ČR vracející se ze zahraničí zpět se musí řídit podmínkami uvedenými v platném Ochranném opatření
-	Ministerstva zdravotnictví ČR.
-
-	6. 10. 2020
-	Na Kubu s PCR testem
-	Při vstupu do země se buď musíte prokázat negativním PCR testem na Covid-19, který byl proveden max. 72 hodin před
-	příletem do destinace.
-
-	©2021, Czechitas
+		6. 10. 2020
+		Na Kubu s PCR testem
+		Při vstupu do země se buď musíte prokázat negativním PCR testem na Covid-19, který byl proveden max. 72 hodin před
+		příletem do destinace.
+	</div>
+	<footer>
+		©2021, Czechitas
+	</footer>
 </body>
 
 </html>
