--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 <body>
 
 	<h1>Cestovka</h1>
-	<header>
-		Last minute
-		Destinace
-		Časté otázky
-	</header>
+	<nav>
+		<ul>
+			<li>Last minute</li>
+			<li>Destinace</li>
+			<li>Časté otázky</li>
+		</ul>
+	</nav>
 	<div uvod>
 		17 600 Kč
 		Pohoda pod palmami
@@ -44,7 +46,7 @@
 		Není-li v cílové destinaci v čase odletu bezpečno, vrátíme vám peníze.
 	</div>
 	<div last_min>
-		Last minute zájezdy
+		<h2>Last minute zájezdy</h2>
 
 		18 500 Kč
 		Grand Canyon
@@ -56,24 +58,27 @@
 		Romantika u horského jezera
 		Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.
 	</div>
-	<div novinky>
-		Novinky
-
-		15. 8. 2020
-		Magický Zanzibar
-		Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví vůně exotických koření, příznivé klima, teplé moře,
-		exotická flóra i fauna.
-
-		31. 9. 2020
-		Návrat českých občanů ze zahraničí
-		Všichni občané ČR vracející se ze zahraničí zpět se musí řídit podmínkami uvedenými v platném Ochranném opatření
-		Ministerstva zdravotnictví ČR.
-
-		6. 10. 2020
-		Na Kubu s PCR testem
-		Při vstupu do země se buď musíte prokázat negativním PCR testem na Covid-19, který byl proveden max. 72 hodin před
-		příletem do destinace.
-	</div>
+	<section novinky>
+		<h2>Novinky</h2>
+		<article class="novinka">
+			<p class="datum">15. 8. 2020</p>
+			<h3>Magický Zanzibar</h3>
+			<p>Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví vůně exotických koření, příznivé klima, teplé moře, exotická flóra i fauna.
+			</p>
+		</article>
+		<article class="novinka">
+			<p class="datum">31. 9. 2020</p>
+			<h3>Návrat českých občanů ze zahraničí</h3>
+			<p>Všichni občané ČR vracející se ze zahraničí zpět se musí řídit podmínkami uvedenými v platném Ochranném opatření Ministerstva zdravotnictví ČR.
+			</p>
+		</article>
+		<article class="novinka">
+			<p class="datum">6. 10. 2020</p>
+			<h3>Na Kubu s PCR testem</h3>
+			<p>Při vstupu do země se buď musíte prokázat negativním PCR testem na Covid-19, který byl proveden max. 72 hodin před příletem do destinace.
+			</p>
+		</article>
+	</section>
 	<footer>
 		©2021, Czechitas
 	</footer>
