--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
 
-	<h1>Cestovka</h1>
-	<nav>
+	<h1 class="logo"><img src="podklady/logo.svg" alt="logo"></h1>
+	<nav class="menu">
 		<ul>
 			<li>Last minute</li>
 			<li>Destinace</li>
@@ -32,19 +32,36 @@
 		4 990 Kč
 		Výlet na kole
 	</div>
-	<div sluzby>
-		Podpora na místě
-		V cílové destinaci jsou k dispozici naši delegáti, kteří vám vždy rádi poradí.
-
-		Služby na letišti
-		Při odletu tam i zpět za vás odbavíme vaše zavadla. Na letišti nebudete čekat.
-
-		Do celého světa
-		Nabízíme pravidelné slevy na vybraných destinací na všech kontinentech.
-
-		Vaše bezpečí
-		Není-li v cílové destinaci v čase odletu bezpečno, vrátíme vám peníze.
-	</div>
+	<section sluzby>
+		<article class="sluzba">
+			<img src="podklady/map.svg" alt="map">
+			<div>
+				<h3>Podpora na místě</h3>
+				V cílové destinaci jsou k dispozici naši delegáti, kteří vám vždy rádi poradí.</p>
+			</div>
+		</article>
+		<article class="sluzba">
+			<img src="podklady/plane.svg" alt="plane">
+			<div>
+				<h3>Služby na letišti</h3>
+				Při odletu tam i zpět za vás odbavíme vaše zavadla. Na letišti nebudete čekat.</p>
+			</div>
+		</article>
+		<article class="sluzba">
+			<img src="podklady/globe.svg" alt="globe">
+			<div>
+				<h3>Do celého světa</h3>
+				Nabízíme pravidelné slevy na vybraných destinací na všech kontinentech.</p>
+			</div>
+		</article>
+		<article class="sluzba">
+			<img src="podklady/shield.svg" alt="shield">
+			<div>
+				<h3>Vaše bezpečí</h3>
+				<p>Není-li v cílové destinaci v čase odletu bezpečno, vrátíme vám peníze.</p>
+			</div>
+		</article>
+	</section>
 	<div last_min>
 		<h2>Last minute zájezdy</h2>
 
@@ -60,19 +77,19 @@
 	</div>
 	<section novinky>
 		<h2>Novinky</h2>
-		<article class="novinka">
+		<article class="novinka, rozklik--text">
 			<p class="datum">15. 8. 2020</p>
 			<h3>Magický Zanzibar</h3>
 			<p>Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví vůně exotických koření, příznivé klima, teplé moře, exotická flóra i fauna.
 			</p>
 		</article>
-		<article class="novinka">
+		<article class="novinka, rozklik--text">
 			<p class="datum">31. 9. 2020</p>
 			<h3>Návrat českých občanů ze zahraničí</h3>
 			<p>Všichni občané ČR vracející se ze zahraničí zpět se musí řídit podmínkami uvedenými v platném Ochranném opatření Ministerstva zdravotnictví ČR.
 			</p>
 		</article>
-		<article class="novinka">
+		<article class="novinka, rozklik--text">
 			<p class="datum">6. 10. 2020</p>
 			<h3>Na Kubu s PCR testem</h3>
 			<p>Při vstupu do země se buď musíte prokázat negativním PCR testem na Covid-19, který byl proveden max. 72 hodin před příletem do destinace.
