--- a/index.html
+++ b/index.html
@@ -21,83 +21,108 @@
 			<li>Časté otázky</li>
 		</ul>
 	</nav>
-	<div uvod>
-		17 600 Kč
-		Pohoda pod palmami
-		Nejlepší dovolená pro nejvíc nejlínější lidi na světě
+	<section class="uvod">
+		<div class="rozklik">
+			<article class="rozklik--foto uvod--foto1">
+				<div class="cena">
+					17 600 Kč
+				</div>
+				<h3 class="nadpis--foto">Pohoda pod palmami</h3>
+				<p>Nejlepší dovolená pro nejvíc nejlínější lidi na světě</p>
+			</article>
+			<article class="rozklik--foto uvod--foto2">
+				<div class="cena">
+					8 490 Kč
+				</div>
+				<h3 class="nadpis--foto">Klid u jezera</h3>
+			</article>
+			<article class="rozklik--foto uvod--foto3">
+				<div class="cena">
+					4 990 Kč
+				</div>
+				<h3 class="nadpis--foto">Výlet na kole</h3>
+			</article>
+		</div>
+	</section>
 
-		8 490 Kč
-		Klid u jezera
-
-		4 990 Kč
-		Výlet na kole
-	</div>
-	<section sluzby>
+	<section calss="sluzby">
+		<h2></h2>
 		<article class="sluzba">
 			<img src="podklady/map.svg" alt="map">
 			<div>
-				<h3>Podpora na místě</h3>
+				<h3 class="nadpis--text">Podpora na místě</h3>
 				V cílové destinaci jsou k dispozici naši delegáti, kteří vám vždy rádi poradí.</p>
 			</div>
 		</article>
 		<article class="sluzba">
 			<img src="podklady/plane.svg" alt="plane">
 			<div>
-				<h3>Služby na letišti</h3>
+				<h3 class="nadpis--text">Služby na letišti</h3>
 				Při odletu tam i zpět za vás odbavíme vaše zavadla. Na letišti nebudete čekat.</p>
 			</div>
 		</article>
 		<article class="sluzba">
 			<img src="podklady/globe.svg" alt="globe">
 			<div>
-				<h3>Do celého světa</h3>
+				<h3 class="nadpis--text">Do celého světa</h3>
 				Nabízíme pravidelné slevy na vybraných destinací na všech kontinentech.</p>
 			</div>
 		</article>
 		<article class="sluzba">
 			<img src="podklady/shield.svg" alt="shield">
 			<div>
-				<h3>Vaše bezpečí</h3>
+				<h3 class="nadpis--text">Vaše bezpečí</h3>
 				<p>Není-li v cílové destinaci v čase odletu bezpečno, vrátíme vám peníze.</p>
 			</div>
 		</article>
 	</section>
-	<div last_min>
+
+	<section class="last_min">
 		<h2>Last minute zájezdy</h2>
+		<div class="rozklik">
+			<article class="rozklik--foto last_min--foto2">
+				<div class=" cena">
+					18 500 Kč </div>
+				<h3 class="nadpis--foto">Grand Canyon</h3>
+			</article>
+			<article class="rozklik--foto last_min--foto3">
+				<div class=" cena">
+					8 900 Kč </div>
+				<h3 class="nadpis--foto">Pěšky po Kanárských ostrovech</h3>
+			</article>
+			<article class="rozklik--foto last_min--foto1">
+				<div class=" cena">
+					15 900 Kč </div>
+				<h3 class="nadpis--foto">Romantika u horského jezera</h3>
+				<p>Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.</p>
+			</article>
+		</div>
+	</section>
 
-		18 500 Kč
-		Grand Canyon
-
-		8 900 Kč
-		Pěšky po Kanárských ostrovech
-
-		15 900 Kč
-		Romantika u horského jezera
-		Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.
-	</div>
-	<section novinky>
+	<section class="novinky">
 		<h2>Novinky</h2>
 		<article class="novinka, rozklik--text">
 			<p class="datum">15. 8. 2020</p>
-			<h3>Magický Zanzibar</h3>
+			<h3 class="nadpis--text">Magický Zanzibar</h3>
 			<p>Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví vůně exotických koření, příznivé klima, teplé moře, exotická flóra i fauna.
 			</p>
 		</article>
 		<article class="novinka, rozklik--text">
 			<p class="datum">31. 9. 2020</p>
-			<h3>Návrat českých občanů ze zahraničí</h3>
+			<h3 class="nadpis--text">Návrat českých občanů ze zahraničí</h3>
 			<p>Všichni občané ČR vracející se ze zahraničí zpět se musí řídit podmínkami uvedenými v platném Ochranném opatření Ministerstva zdravotnictví ČR.
 			</p>
 		</article>
 		<article class="novinka, rozklik--text">
 			<p class="datum">6. 10. 2020</p>
-			<h3>Na Kubu s PCR testem</h3>
+			<h3 class="nadpis--text">Na Kubu s PCR testem</h3>
 			<p>Při vstupu do země se buď musíte prokázat negativním PCR testem na Covid-19, který byl proveden max. 72 hodin před příletem do destinace.
 			</p>
 		</article>
 	</section>
+
 	<footer>
-		©2021, Czechitas
+		<p>©2021, Czechitas</p>
 	</footer>
 </body>
 
