--- a/index.html
+++ b/index.html
@@ -12,41 +12,37 @@
 </head>
 
 <body>
-
-	<h1 class="logo"><img src="podklady/logo.svg" alt="logo"></h1>
 	<nav class="menu">
+		<h1 class="logo"><img src="podklady/logo.svg" alt="logo"></h1>
+
 		<ul>
 			<li>Last minute</li>
 			<li>Destinace</li>
 			<li>Časté otázky</li>
 		</ul>
 	</nav>
+
 	<section class="uvod">
 		<div class="rozklik">
 			<article class="rozklik--foto uvod--foto1">
-				<div class="cena">
-					17 600 Kč
+				<div class="cena"> 17 600 Kč </div>
+				<div class="foto-popis">
+					<h3 class="nadpis--foto">Pohoda pod palmami</h3>
+					<p>Nejlepší dovolená pro nejvíc nejlínější lidi na světě</p>
 				</div>
-				<h3 class="nadpis--foto">Pohoda pod palmami</h3>
-				<p>Nejlepší dovolená pro nejvíc nejlínější lidi na světě</p>
 			</article>
 			<article class="rozklik--foto uvod--foto2">
-				<div class="cena">
-					8 490 Kč
-				</div>
+				<div class="cena"> 8 490 Kč </div>
 				<h3 class="nadpis--foto">Klid u jezera</h3>
 			</article>
 			<article class="rozklik--foto uvod--foto3">
-				<div class="cena">
-					4 990 Kč
-				</div>
+				<div class="cena"> 4 990 Kč </div>
 				<h3 class="nadpis--foto">Výlet na kole</h3>
 			</article>
 		</div>
 	</section>
 
-	<section calss="sluzby">
-		<h2></h2>
+	<section class="sluzby">
 		<article class="sluzba">
 			<img src="podklady/map.svg" alt="map">
 			<div>
@@ -81,20 +77,19 @@
 		<h2>Last minute zájezdy</h2>
 		<div class="rozklik">
 			<article class="rozklik--foto last_min--foto2">
-				<div class=" cena">
-					18 500 Kč </div>
+				<div class=" cena"> 18 500 Kč </div>
 				<h3 class="nadpis--foto">Grand Canyon</h3>
 			</article>
 			<article class="rozklik--foto last_min--foto3">
-				<div class=" cena">
-					8 900 Kč </div>
+				<div class=" cena">8 900 Kč </div>
 				<h3 class="nadpis--foto">Pěšky po Kanárských ostrovech</h3>
 			</article>
 			<article class="rozklik--foto last_min--foto1">
-				<div class=" cena">
-					15 900 Kč </div>
-				<h3 class="nadpis--foto">Romantika u horského jezera</h3>
-				<p>Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.</p>
+				<div class=" cena"> 15 900 Kč </div>
+				<div class="foto-popis">
+					<h3 class="nadpis--foto">Romantika u horského jezera</h3>
+					<p>Dechberoucí výhledy na horské štíty a zrcadlovou hladinu jezera.</p>
+				</div>
 			</article>
 		</div>
 	</section>
