--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		</ul>
 	</nav>
 
-	<section class="uvod">
-		<div class="rozklik">
+	<section id="uvod">
+		<div class="rozklik uvod">
 			<article class="rozklik--foto uvod--foto1">
 				<div class="cena"> 17 600 Kč </div>
 				<div class="foto-popis">
@@ -42,26 +42,26 @@
 		</div>
 	</section>
 
-	<section class="sluzby">
+	<section id="sluzby">
 		<article class="sluzba">
 			<img src="podklady/map.svg" alt="map">
 			<div>
 				<h3 class="nadpis--text">Podpora na místě</h3>
-				V cílové destinaci jsou k dispozici naši delegáti, kteří vám vždy rádi poradí.</p>
+				<p>V cílové destinaci jsou k dispozici naši delegáti, kteří vám vždy rádi poradí.</p>
 			</div>
 		</article>
 		<article class="sluzba">
 			<img src="podklady/plane.svg" alt="plane">
 			<div>
 				<h3 class="nadpis--text">Služby na letišti</h3>
-				Při odletu tam i zpět za vás odbavíme vaše zavadla. Na letišti nebudete čekat.</p>
+				<p>Při odletu tam i zpět za vás odbavíme vaše zavadla. Na letišti nebudete čekat.</p>
 			</div>
 		</article>
 		<article class="sluzba">
 			<img src="podklady/globe.svg" alt="globe">
 			<div>
 				<h3 class="nadpis--text">Do celého světa</h3>
-				Nabízíme pravidelné slevy na vybraných destinací na všech kontinentech.</p>
+				<p>Nabízíme pravidelné slevy na vybraných destinací na všech kontinentech.</p>
 			</div>
 		</article>
 		<article class="sluzba">
@@ -75,7 +75,7 @@
 
 	<section class="last_min">
 		<h2>Last minute zájezdy</h2>
-		<div class="rozklik">
+		<div class="rozklik last-min">
 			<article class="rozklik--foto last_min--foto2">
 				<div class=" cena"> 18 500 Kč </div>
 				<h3 class="nadpis--foto">Grand Canyon</h3>
@@ -94,26 +94,28 @@
 		</div>
 	</section>
 
-	<section class="novinky">
+	<section id="novinky">
 		<h2>Novinky</h2>
-		<article class="novinka, rozklik--text">
-			<p class="datum">15. 8. 2020</p>
-			<h3 class="nadpis--text">Magický Zanzibar</h3>
-			<p>Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví vůně exotických koření, příznivé klima, teplé moře, exotická flóra i fauna.
-			</p>
-		</article>
-		<article class="novinka, rozklik--text">
-			<p class="datum">31. 9. 2020</p>
-			<h3 class="nadpis--text">Návrat českých občanů ze zahraničí</h3>
-			<p>Všichni občané ČR vracející se ze zahraničí zpět se musí řídit podmínkami uvedenými v platném Ochranném opatření Ministerstva zdravotnictví ČR.
-			</p>
-		</article>
-		<article class="novinka, rozklik--text">
-			<p class="datum">6. 10. 2020</p>
-			<h3 class="nadpis--text">Na Kubu s PCR testem</h3>
-			<p>Při vstupu do země se buď musíte prokázat negativním PCR testem na Covid-19, který byl proveden max. 72 hodin před příletem do destinace.
-			</p>
-		</article>
+		<div class="novinky">
+			<article class="novinka, rozklik--text">
+				<p class="datum">15. 8. 2020</p>
+				<h3 class="nadpis--text">Magický Zanzibar</h3>
+				<p>Zanzibar, při vyslovení jména tohoto kouzelného ostrova, se vybaví vůně exotických koření, příznivé klima, teplé moře, exotická flóra i fauna.
+				</p>
+			</article>
+			<article class="novinka, rozklik--text">
+				<p class="datum">31. 9. 2020</p>
+				<h3 class="nadpis--text">Návrat českých občanů ze zahraničí</h3>
+				<p>Všichni občané ČR vracející se ze zahraničí zpět se musí řídit podmínkami uvedenými v platném Ochranném opatření Ministerstva zdravotnictví ČR.
+				</p>
+			</article>
+			<article class="novinka, rozklik--text">
+				<p class="datum">6. 10. 2020</p>
+				<h3 class="nadpis--text">Na Kubu s PCR testem</h3>
+				<p>Při vstupu do země se buď musíte prokázat negativním PCR testem na Covid-19, který byl proveden max. 72 hodin před příletem do destinace.
+				</p>
+			</article>
+		</div>
 	</section>
 
 	<footer>
